--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-info.build.artifact=@project.artifactId@
-info.build.name=@project.name@
-info.build.description=@project.description@
-info.build.version=@project.version@
-
-spring.devtools.add-properties=false
 server.port=8080
+#Spring Management
+management.endpoints.enabled-by-default=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=health,info
+
+#Spring app info
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
